auf in die letzte Runde

--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -1,18 +1,16 @@
 table {
-    height: 475px; /*TODO Darf nicht hart codiert sein M&F sonst sind schmale Level breit gezogen M&F*/
-    width: 600px;
+    height: 100px; /*TODO Darf nicht hart codiert sein M&F sonst sind schmale Level breit gezogen M&F*/
+    width: 100px;
     margin-left: auto;
     margin-right: auto;
 }
 
 table, td {
     border-collapse: collapse;
-    border: 1px solid; /*TODO Tableborder bis grafiken eingefügt werden mit linien M&F*/
+    border: 0px solid; /*TODO Tableborder bis grafiken eingefügt werden mit linien M&F*/
 }
 
 #lvl{ /*TODO haben wir das nicht oben schon festgelegt? (table) M&F*/
-    height:475px; /*stand auf 480px*/
-    width:600px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -23,12 +21,13 @@ td,.ground,.wall,.target,img{
 }
 
 .wall {
-    background-color: grey;
+
 }
 
 .target {
     /*text-align: center; TODO das sagen wir doch schon bei rd oder? M&F*/
-    background-color: blue;
+    background: url(pictures/target.png);
+    background-size: 100%;
 }
 /*
 TODO was ist denn mit ground, player und crate? und wieso ehemalig zweimal ground? M&F
