--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -10,12 +10,6 @@ table, td {
     border: 0px solid; /*TODO Tableborder bis grafiken eingefügt werden mit linien M&F*/
 }
 
-#lvl{ /*TODO haben wir das nicht oben schon festgelegt? (table) M&F*/
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 td,.ground,.wall,.target,img{
     text-align: center;
 }
@@ -31,6 +25,7 @@ td,.ground,.wall,.target,img{
 }
 
 h1 {
+
     text-align: center;
     border-collapse: collapse;
 }
@@ -61,7 +56,7 @@ h1 {
     top: 0px;
     left: 0px;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.50);
+    background-color: rgba(0, 10, 10, 0.8);
     height: 100%;
     text-align: center;
 
@@ -78,13 +73,13 @@ h1 {
 
 #next {
 
-    height: 200px;
-    width: 400px;
+    height: 50px;
+    width: 200px;
     position: absolute;
     text-align: center;
-    top: 50%;
-    left: 50%;
-    visibility: hidden;
+    top: 75%;
+    left: 60%;
+
 }
 
 #welcome, h1 {
@@ -95,11 +90,49 @@ h1 {
 
 }
 
-
-
 button {
 
-    font-size: 30px;
-    height: 100px;
-    width: 450px;
+    font-size: 20px;
+    height: 60px;
+    width: 200px;
+}
+
+#submit {
+    top: 5%;
+    font-size: 20px;
+    height: 27px;
+    width: 200px;
+
+}
+
+#close {
+    top: 5%;
+    font-size: 20px;
+    height: 27px;
+    width: 200px;
+
+}
+
+form {
+    position: absolute;
+    left: 30%;
+    top: 40%;
+
+}
+
+#b5 {
+
+    position: absolute;
+    right: 85%;
+    font-size: 20px;
+    height: 50px;
+    width: 200px;
+    visibility: hidden;
+
+}
+
+#start {
+    position: absolute;
+
+
 }
