--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -34,10 +34,16 @@ h1 {
     text-align: center;
 }
 
-#states{
+#stat {
+
     text-align: center;
-    margin-left: auto;
-    margin-right:auto ;
+
+
+}
+
+stat {
+
+    font-size: 20px;
 }
 
 #userstatus{
@@ -53,8 +59,8 @@ h1 {
 
 #overlay {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 1px;
+    left: 1px;
     width: 100%;
     background-color: rgba(0, 10, 10, 0.8);
     height: 100%;
@@ -67,10 +73,6 @@ h1 {
     visibility: hidden;
 }
 
-#states {
-    visibility: hidden;
-}
-
 #next {
 
     height: 50px;
@@ -78,7 +80,7 @@ h1 {
     position: absolute;
     text-align: center;
     top: 75%;
-    left: 60%;
+    left: 55%;
 
 }
 
@@ -98,7 +100,8 @@ button {
 }
 
 #submit {
-    top: 5%;
+
+    top: 50%;
     font-size: 20px;
     height: 27px;
     width: 200px;
@@ -106,7 +109,8 @@ button {
 }
 
 #close {
-    top: 5%;
+
+    top: 50%;
     font-size: 20px;
     height: 27px;
     width: 200px;
@@ -120,7 +124,7 @@ form {
 
 }
 
-#b5 {
+#resetbutton {
 
     position: absolute;
     right: 85%;
@@ -128,6 +132,7 @@ form {
     height: 50px;
     width: 200px;
     visibility: hidden;
+    background-color: lightgrey;
 
 }
 
@@ -136,3 +141,22 @@ form {
 
 
 }
+
+#logedin {
+    position: absolute;
+    left: 40%;
+    top: 50%
+
+}
+
+#edituser {
+    position: absolute;
+    left: 40%;
+    top: 50%
+}
+
+em {
+    color: red;
+}
+
+
