--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -42,14 +42,14 @@ h1 {
 }
 
 #userstatus {
-    margin-left: 80%;
+    margin-right: 10%;
     color: red;
     font-size: 20px;
     text-align: right;
 }
 
 #gamekeystatus {
-    margin-left: 80%;
+    margin-right: 10%;
     color: red;
     font-size: 20px;
     text-align: right;
