--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -1,34 +1,14 @@
 table {
-    height: 100px;
-    width: 100px;
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
-}
-
-table, td {
-    border-collapse: collapse;
-
-}
-
-td, .ground, .wall, .target, img {
-    text-align: center;
-}
-
-.wall {
-
+    margin-bottom: 5px;
 }
 
 .target {
 
     background: url(pictures/target.png);
     background-size: 100%;
-}
-
-h1 {
-
-    text-align: center;
-    border-collapse: collapse;
 }
 
 #win {
@@ -42,19 +22,17 @@ h1 {
 }
 
 #userstatus {
-    margin-left: 80%;
+    margin-left: 1%;
+    position: absolute;
     color: red;
     font-size: 20px;
-    text-align: right;
 }
 
 #gamekeystatus {
-    margin-left: 80%;
+    margin-left: 78%;
+    position: absolute;
     color: red;
     font-size: 20px;
-    text-align: right;
-
-
 }
 
 #overlay {
@@ -63,36 +41,33 @@ h1 {
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 10, 10, 0.8);
+    background-color: rgba(0, 10, 10, 0.5);
     height: 100%;
     text-align: center;
 
 }
 
-#save {
-
+#status {
+    background-color: darkgray;
 }
 
 #stat {
-
+    margin-left: 15%;
+    position: fixed;
     text-align: center;
     font-size: 20px;
 }
 
 #next {
 
-    height: 40px;
-    width: 200px;
     position: absolute;
     text-align: center;
     bottom: 12%;
     left: 43%;
-
 }
 
 #save {
-    height: 40px;
-    width: 200px;
+
     position: absolute;
     text-align: center;
     bottom: 5%;
@@ -100,54 +75,46 @@ h1 {
     visibility: hidden;
 }
 
-#welcome, h1 {
+h1 {
+
+    left: 0px;
+    top: 0px;
     border-collapse: collapse;
+    background-color: red;
     text-align: center;
     width: 100%;
-    background-color: red;
-
 }
 
 button {
-
+    background-color: lightgrey;
+    border-radius: 100%;
     font-size: 20px;
     height: 50px;
     width: 200px;
 }
 
-#submit {
-    font-size: 15px;
-    height: 22px;
+input {
+    font-size: 20px;
+    height: 20px;
     width: 200px;
-
-}
-
-#close {
-    font-size: 15px;
-    height: 22px;
-    width: 200px;
-
 }
 
 form {
     position: absolute;
     left: 30%;
     top: 40%;
-
 }
 
-#reset {
+#leveloptions {
     margint-top: 20%;
-    margin-left: 43%;
-
+    margin-left: 35%;
 }
 
 #resetbutton {
+    visibility: hidden;
+}
 
-    text-align: center;
-    font-size: 20px;
-    height: 40px;
-    width: 200px;
+#skipbutton {
     visibility: hidden;
 }
 
@@ -169,8 +136,6 @@ form {
     position: absolute;
     left: 43%;
     top: 50%;
-
-
 }
 
 em {
@@ -178,7 +143,61 @@ em {
 }
 
 #highscore {
+
     margin-top: 15%;
     text-align: center;
     font-size: 20px;
 }
+
+#messagefield {
+    margin-left: 25%;
+    width: 50%;
+    font-size: 20px;
+    color: blue;
+    text-align: right;
+
+}
+
+.greetinganimation {
+    opacity: 0;
+    position: relative;
+    animation: greetingduration 7s;
+}
+
+@keyframes greetingduration {
+    0% {
+        opacity: 1;
+        top: 0%;
+        left: 20%
+    }
+    100% {
+        opacity: 0;
+        top: 0%;
+        left: 20%
+    }
+}
+
+.messageanimation {
+    opacity: 0;
+    position: relative;
+    animation: messageduration 5s;
+
+}
+
+@keyframes messageduration {
+    0% {
+        opacity: 1;
+        top: 0%;
+        left: 20%
+    }
+    100% {
+        opacity: 0;
+        top: 0%;
+        left: 20%
+    }
+}
+
+
+
+
+
