--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -47,8 +47,21 @@ table {
 
 }
 
+#winoverlay {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 10, 10, 0.2);
+    height: 100%;
+    text-align: center;
+
+}
+
 #stat {
-    margin-left: 15%;
+    margin-left: 20%;
+    margin-right: 20%;
     position: fixed;
     text-align: center;
     font-size: 20px;
@@ -58,7 +71,7 @@ table {
 
     position: absolute;
     text-align: center;
-    bottom: 12%;
+    bottom: 13%;
     left: 43%;
 }
 
