--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -5,9 +5,31 @@ table {
     margin-bottom: 5px;
 }
 
+table, td {
+    border-spacing: 0;
+
+}
+
 .target {
 
     background: url(pictures/target.png);
+    background-size: 100%;
+}
+
+.player {
+
+    background: url(pictures/player.png);
+    background-size: 100%;
+}
+
+.crate {
+
+    background: url(pictures/crate.png);
+    background-size: 100%;
+}
+
+.wall {
+    background: url(pictures/wall.png);
     background-size: 100%;
 }
 
@@ -27,6 +49,18 @@ table {
     color: red;
     font-size: 20px;
 }
+
+#objectlayer {
+    position: fixed;
+    width: 100%;
+
+}
+
+#groundlayer {
+    position: fixed;
+    width: 100%;
+}
+
 
 #gamekeystatus {
     margin-left: 78%;
@@ -54,18 +88,20 @@ table {
 }
 
 #stat {
-    margin-left: 20%;
-    margin-right: 20%;
-    position: fixed;
     text-align: center;
     font-size: 20px;
+    position: absolute;
+    width: 97%;
+    bottom: 1%;
+
+
 }
 
 #next {
 
     position: absolute;
     text-align: center;
-    bottom: 13%;
+    bottom: 20%;
     left: 43%;
 }
 
