--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -42,6 +42,7 @@ table, td {
 }
 
 #states {
+    position: fixed;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -106,7 +107,7 @@ table, td {
 #stat {
     text-align: center;
     font-size: 20px;
-    position: absolute;
+    position: fixed;
     width: 97%;
     bottom: 1%;
 
@@ -174,7 +175,7 @@ form {
     visibility: hidden;
 }
 
-#skipbutton {
+#pullbutton {
     visibility: hidden;
 }
 
