--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -74,6 +74,12 @@ table, td {
     right: 50%;
 }
 
+#fieldlevel {
+    width: 80%;
+    margin-top: auto;
+    margin-bottom: 10%;
+}
+
 #objectlayer {
     position: fixed;
     width: 100%;
@@ -88,7 +94,6 @@ table, td {
 #overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
     /*background-color: rgba(0, 10, 10, 0.5);*/
     background-color: white;
     text-align: center;
@@ -168,10 +173,14 @@ form {
 }
 
 #leveloptions {
-    margin-left: 35%;
+    position: center;
 }
 
 #resetbutton {
+    visibility: hidden;
+}
+
+#pushbutton {
     visibility: hidden;
 }
 
@@ -180,28 +189,20 @@ form {
 }
 
 #start {
-    position: absolute;
-    left: 45%;
-    right: 65%;
-    top: 50%;
-    bottom: 50%;
+
+    position: center;
 
 }
 
 #registered {
-    position: absolute;
-    left: 45%;
-    right: 65%;
-    top: 50%;
-    bottom: 50%;
+
+    position: center;
+
 }
 
 #edituser {
-    position: absolute;
-    left: 45%;
-    right: 65%;
-    top: 50%;
-    bottom: 50%;
+
+    position: center;
 }
 
 em {
