--- a/web/KistenschiebenView.css
+++ b/web/KistenschiebenView.css
@@ -1,8 +1,9 @@
+
 table {
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 table, td {
@@ -12,29 +13,87 @@ table, td {
 
 .target {
 
-    background: url(pictures/target.png);
+    background: url(pictures/target.png) no-repeat;
     background-size: 100%;
 }
 
 .player {
 
-    background: url(pictures/player.png);
+    background: url(pictures/player.png) no-repeat;
     background-size: 100%;
 }
 
 .crate {
 
-    background: url(pictures/crate.png);
+    background: url(pictures/crate.png) no-repeat;
     background-size: 100%;
 }
 
 .wall {
-    background: url(pictures/wall.png);
+    background: url(pictures/wall.png) no-repeat;
     background-size: 100%;
 }
 
-.instructions {
-    background-image: url(pictures/Anleitung_1.png);
+.instruction1 {
+    width: 100%;
+    height: 100%;
+    background: url(pictures/instruction_1.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+.instruction2 {
+    width: 100%;
+    height: 75%;
+    background: url(pictures/instruction_2.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+.instruction3 {
+    width: 100%;
+    height: 75%;
+    background: url(pictures/instruction_3.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+.instruction4 {
+    width: 100%;
+    height: 75%;
+    background: url(pictures/instruction_4.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+.instruction5 {
+    width: 100%;
+    height: 75%;
+    background: url(pictures/instruction_5.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+.instruction6 {
+    width: 100%;
+    height: 75%;
+    background: url(pictures/instruction_6.png) no-repeat top center;
+    background-size: 50%;
+    position: center;
+    bottom: 10%;
+}
+
+#aboutbuttonposition {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 1%;
+
 }
 
 #win {
@@ -93,19 +152,21 @@ table, td {
 
 #overlay {
     position: absolute;
-    width: 100%;
+    width: 99%;
     height: 60%;
     /*background-color: rgba(0, 10, 10, 0.5);*/
     background-color: white;
     text-align: center;
     margin-top: 10%;
 
+
 }
+
 
 #winoverlay {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 88%;
     background-color: rgba(0, 10, 10, 0.2);
     text-align: center;
 
@@ -122,19 +183,12 @@ table, td {
 }
 
 #next {
-
-    position: absolute;
+    width: 99%;
     text-align: center;
     bottom: 20%;
-    left: 43%;
 }
 
-#save {
-
-    position: absolute;
-    text-align: center;
-    bottom: 5%;
-    left: 43%;
+#savebutton {
     visibility: hidden;
 }
 
@@ -149,13 +203,12 @@ h1 {
 }
 
 button {
-
     background-image: url(pictures/DefaultButton.png);
     border-spacing: 0;
     border: 0px;
     font-size: 20px;
-    height: 49px;
-    width: 200px;
+    height: 51px;
+    width: 210px;
     background-size: 100%;
 }
 
@@ -165,7 +218,7 @@ button {
 
 input {
     font-size: 20px;
-    height: 40px;
+    height: 45px;
     width: 200px;
 }
 
@@ -177,6 +230,12 @@ form {
 
 #leveloptions {
     position: center;
+}
+
+#gamebuttons {
+    width: 100%;
+    text-align: center;
+
 }
 
 #resetbutton {
@@ -213,8 +272,7 @@ em {
 }
 
 #highscore {
-
-    margin-top: 15%;
+    margin-top: 5%;
     text-align: center;
     font-size: 20px;
 }
